--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,15 +8,9 @@
   letter-spacing: 0.1px;
 }
 
-<<<<<<< HEAD
-body{
-  height:100vh;
- background-image: url("./assets/Images/bg_final_image.jpeg");
-=======
 body {
   height: 100vh;
-  /* background-image: url("./assets/Images/bg_final_image.jpeg");*/
->>>>>>> origin/master
+   background-image: url("./assets/Images/bg_final_image.jpeg");
   background-size: cover;
   width: 100vw;
 }
@@ -638,4 +632,69 @@ body {
   font-weight: 600;
   margin: 5px;
   background: rgb(202, 227, 230);
+}
+
+
+
+.sign-el
+{
+  border-radius:12px;
+  margin:5px;
+  border:1px solid #b8b8b8;
+  padding:10px;
+  width:350px;
+  margin-top:15px;
+  margin-bottom:10px;
+}
+
+.sign-con{
+  background-image:url("https://th.bing.com/th/id/R.4a29922ecc034fec8c47f72abc2e3d3a?rik=QZ1MVBejFFcf5w&riu=http%3a%2f%2fwww.solidbackgrounds.com%2fimages%2f2560x1600%2f2560x1600-white-solid-color-background.jpg&ehk=gxDw3Nje94wPA9EVy1hB2RqiK0vN4sOUB2E30hkUzCU%3d&risl=&pid=ImgRaw&r=0");
+  background-size:cover;
+  height:100vh;
+  text-align:center;
+}
+
+.sign-card{
+  margin-left:auto;
+  margin-right:auto;
+  box-shadow:10px 10px 10px 10px rgba(97, 97, 97, 5);
+  padding:10px;
+  border-radius:10px;
+  width:450px;
+  height:500px;
+  margin-top:30px;
+  margin-bottom:30px;
+  padding:20px;
+  overflow-y: hidden;
+}
+
+.sign-btn
+{
+  width: 150px;
+  height: 40px;
+  background-color:#552a0b;
+  font-size: 24px;
+  font-weight: 600;
+  color:white;
+  border-radius: 15px;
+  border: none;
+  cursor:pointer;
+  transition: all 0.5s;
+  text-align:center;
+  padding:4px;
+  overflow-y: hidden;
+  margin-top:20px;
+  margin-bottom:40px;
+  text-align:center;
+  padding-bottom:40px;
+}
+
+
+
+
+.sign-btn:hover
+{
+  border:solid 5px #552a0b;
+  background-color:white;
+  color:#3d2819;
 }
