--- a/client/src/App.css
+++ b/client/src/App.css
@@ -827,7 +827,7 @@
   border-left: 1px solid #552a0b; 
   height: 20px;
   margin:10px;
-  margin-top:-1px;
+  margin-top:-0.3px;
 }
 
 .lsp-con{
@@ -855,6 +855,7 @@
   color:#552a0b;
   font-size:15px;
   padding:10px;
+  font-weight:300;
 }
 
 .lawyer-span{
