--- a/client/src/App.css
+++ b/client/src/App.css
@@ -864,3 +864,52 @@
   color:black;
 }
 
+
+/*User dashboard*/
+
+.sidebar{
+  display:flex;
+  background: rgb(240, 240, 240);
+}
+
+.sidebar2{
+  width: 20%;
+  height: 100vh;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  background: white;
+}
+
+.btncon{
+  margin: 5vw;
+  display: flex;
+  flex-direction: column;
+}
+.user-logo{
+  height:60px;
+  width: auto;
+  background: url(./assets/Images/LawConnectIndia-logos.jpeg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.sidebtn{
+  height: 60px;
+  width: 200px;
+  font-size: 24px;
+  font-weight: 100;
+  color: #b8b8b8;
+  border: none;
+  background: white;
+  margin: 1vw;
+  border-radius: 15px;
+  transition: all 0.5s;
+}
+
+.sidebtn:hover{
+  background: #40a4e7;
+  color: white;
+}
