--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,12 +19,6 @@
   background-color: black;
 }
 
-/* .navbar-container{
-  height: 100vh;
-  background: url(./assets/Images/Home_bgimg.jpg);
-  background-size: cover;
-} */
-
 .logo {
   width: 150px;
   height: 60px;
@@ -633,8 +627,7 @@
   background: transparent;
   border: 3px solid #552a0b;
   margin: 10px;
-  margin-left: 10px;
-  margin-top: -1px;
+  /* margin-top: -1px; */
   font-size: 15px;
   font-weight: 600;
   color: #552a0b;
@@ -643,22 +636,18 @@
   overflow-y: hidden;
   border-radius: 15px;
   text-align: center;
+  margin-left:50px;
 }
 
 .lawyer-container {
   box-shadow: 10px 10px 10px 10px rgba(97, 97, 97, 5);
 }
 
-.law-button:hover {
-  background-color: white;
-  color: #552a0b;
-  border: 3px solid #552a0b;
-}
 
-.law-button:active {
-  background: white;
-  color: #552a0b;
-  border: 3px solid #552a0b;
+.law-button:hover {
+  background:#552a0b;
+  color: white;
+  border: 3px solid white;
 }
 
 .lawyer-name {
@@ -719,7 +708,7 @@
   padding: 20px;
   border-radius: 10px;
   width: 450px;
-  height: 500px;
+  height: 540px;
   overflow-y: hidden;
   transition: all 0.5s;
   border: 2px solid rgb(179, 179, 179);
@@ -874,6 +863,9 @@
   align-items: center;
   justify-content: space-between;
   background: white;
+  margin-left:10px;
+  margin-top:10px;
+  margin-bottom:10px;
 }
 
 .btncon {
@@ -881,13 +873,17 @@
   display: flex;
   flex-direction: column;
 }
+
 .user-logo {
-  height: 60px;
-  width: auto;
+  height: 80px;
+  width: 180px;
   background: url(./assets/Images/LawConnectIndia-logos.jpeg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  margin-left:85px;
+  margin-top:10px;
+  margin-bottom:-60px;
 }
 
 .sidebtn {
@@ -908,6 +904,17 @@
   color: white;
 }
 
+.rightpart{
+  height:100vh;
+  width:100vw;
+  border-radius:15px;
+  padding:10px;
+  text-align:left;
+  margin:10px;
+  background: white;
+}
+
+
 /* Filter secton */
 
 .filter-button {
@@ -927,4 +934,48 @@
   font-weight:600;
   margin-right:10px;
   margin-left:10px;
+}
+
+
+/* Meetings Heading */
+
+.meetings-heading{
+  font-size:28px;
+  color:#552a0b;
+  font-weight:bold;
+  text-align:center;
+  margin-left:20px;
+}
+
+.meetings-items{
+  border-style:none;
+  width:180px;
+  color:black;
+  font-weight:500;
+  font-size:20px;
+  margin-left:20px;
+  margin-right:20px;
+  margin-top:20px;
+  background-color:white;
+  text-align:center;
+}
+
+.meetings-items:hover {
+  border: 1px solid #552a0b;
+  border-radius:15px;
+}
+
+.meetings-items:active{
+  background-color:#75c6fc6c;
+  border-radius:15px;
+}
+
+.meetings-con{
+  color:#552a0b;
+  font-weight:490px;
+  font-size:25px;
+}
+
+.horizontal-line{
+  border: 1px solid #2a1506;
 }
