--- a/client/src/App.css
+++ b/client/src/App.css
@@ -979,3 +979,70 @@
 .horizontal-line{
   border: 1px solid #2a1506;
 }
+
+.meeting-con{
+  background-color:#75c6fc28;
+  height:300px;
+  width:400px;
+  margin:20px;
+  padding:30px;
+}
+
+.meeting-con h4{
+  color:#552a0b;
+  font-weight:600;
+  font-size:20px;
+}
+
+.meeting-con span{
+  color:black;
+}
+
+.meeting-con h5{
+  color:black;
+  font-weight:500;
+  font-size:18px;
+}
+
+/* Review container */
+
+
+.review-pg-h1{
+  color:#552a0b;
+  font-weight:700;
+  text-align:center;
+  margin:20px;
+}
+
+.review-con{
+  background-color:#75c6fc28;
+  margin:10px;
+  padding:10px;
+}
+
+.review-heading{
+  color:black;
+  font-weight:600;
+}
+
+.review-para{
+  color:#552a0b;
+  font-weight:450;
+  font-size:18px;
+}
+
+.lawyer-image-user {
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  margin:10px;
+}
+
+.center-con{
+  text-align:center;
+}
+
+.span-user{
+  font-weight:300;
+}
+
